[package]
name = "akatsuki-pp"
version = "1.1.5"
edition = "2021"
authors = ["MaxOhn <ohn.m@hotmail.de>", "tsunyoku <tsunyoku@gmail.com>", "Aochi <me@aochi.uk>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/RealistikOsu/akatsuki-pp-rs"
description = "Difficulty and performance calculation for osu!"
keywords = ["osu", "pp", "stars", "performance", "difficulty"]

[features]
default = []
raw_strains = []
sync = []
tracing = ["rosu-map/tracing"]

[dependencies]
rosu-map = { version = "0.2.1" }
rosu-mods = { version = "0.3.0" }

[dev-dependencies]
proptest = "1.6.0"

[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3
